# nexa

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  run_demo.sh  sitemap.xml
.github/workflows/: python-test.yml
concepts/modules/: index.html
concepts/semantic-matching/: index.html
concepts/workflows/: index.html
demo/: README.md  demo_workflow.json  nexa_config.example.json  run_demo.py  simulation_example.json
demo/modules/chain_builder/: chain_builder.json
demo/modules/ff_builder/: ff_builder.json
demo/modules/leaching_evaluator/: leaching_evaluator.json
demo/modules/nanoparticle_builder/: nanoparticle_builder.json
demo/scripts/: chain_builder.py  ff_builder.py  leaching_evaluator.py  nanoparticle_builder.py  solvation_module.py
docs/: index.md  installation.md  quickstart.md  visualization.md
docs/concepts/: modules.md  semantic-matching.md  workflows.md
docs/execution/: backends.md  nextflow.md
execution/backends/: index.html
execution/nextflow/: index.html
installation/: index.html
nexa/: __init__.py  cli.py  executor.py
nexa/backends/: base.py  local.py  nextflow.py  remote.py
nexa/core/: module.py  workflow.py
nexa/utils/: banner.py
nexa/viz/: cli.py  cli.py.OLD  workflow_to_cytoscape.py
quickstart/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/visualization/: index.html
tests/: test_core.py
visualization/: index.html
(+11 files in other folders)
